actual overflow handling to prevent sliding whole page on click scroll bug

--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -1,8 +1,5 @@
 @import "src/colors.scss";
 
-body {
-  overflow: hidden;
-}
 
 .SlideCardList {
   position: relative;
